# BeeSense

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/beesense/: __init__.py  core.py  light_sensor.py  mcp9808.py  rest_api.py  sph0645.py
tests/: test_beesense.py
